@@ -80,6 +80,15 @@
 				</div>
 				<div>
 					<li class="settings_check">
+						<input type="checkbox" id="highlight_notinterested"><label for="highlight_notinterested" id="highlight_notinterested_text">Items marked not interested</label>
+					</li>
+					<li class="settings_color">
+						<input type="color" id="highlight_notinterested_color" class="colorbutton">
+						<button id="highlight_notinterested_default" class="btn">Default</button>
+					</li>
+				</div>
+				<div>
+					<li class="settings_check">
 						<input type="checkbox" id="highlight_excludef2p"><label for="highlight_excludef2p" id="highlight_excludef2p_text">Exclude free to play games from highlighting</label>
 					</li>
 				</div>
@@ -127,6 +136,15 @@
 					<li class="settings_color">
 						<input type="color" id="tag_inv_guestpass_color" class="colorbutton">
 						<button id="tag_inv_guestpass_default" class="btn">Default</button>
+					</li>
+				</div>
+				<div>
+					<li class="settings_check">
+						<input type="checkbox" id="tag_notinterested"><label for="tag_notinterested" id="tag_notinterested_text">Items marked not interested</label>
+					</li>
+					<li class="settings_color">
+						<input type="color" id="tag_notinterested_color" class="colorbutton">
+						<button id="tag_notinterested_default" class="btn">Default</button>
 					</li>
 				</div>
 				<li class="header" id="hide_text">Hide</li>
